# snow-leopard

./: .gitignore  README.md  pyproject.toml
app/: detect_confident_joint.py  detect_with_cl.py  eval.py
app/algorithms/: __init__.py  cl.py
app/data/: datasets.py  import_products.py  split.py
app/models/: __init__.py
config/noise/ice-cat-office/: folder-binding-covers-sym-0.2.json  folder-binding-covers-sym-0.3.json  (+4 more)
config/secrets/: arangodb.json-sample
data/: ice-cat-products-clusters.xlsx  page-rank-results-file-storage-boxes-vs-whiteboards-highest-rank.xlsx  page-rank-results-file-storage-boxes-vs-whiteboards.xlsx  page-rank-results-top2-cat2-n969-highest-rank.xlsx  page-rank-results-top2-cat2-n969.xlsx  page-rank-results-v1-cat2-file-storage-boxes-vs-whiteboards.xlsx  page-rank-results-v2-cat2-file-storage-boxes-vs-whiteboards-highest-rank.xlsx  page-rank-results-v2-highest-rank.xlsx  page-rank-results-v2.xlsx  page-rank-results-v3-cat2-highest-rank.xlsx  page-rank-results-v3-cat2.xlsx  page-rank-results-v3-highest-rank.xlsx  page-rank-results-v3.xlsx  page-rank-results-v4-cat3-n412-highest-rank.xlsx  page-rank-results-v4-cat3-n412.xlsx
notebooks/: 01-initial.ipynb  02-table-generation.ipynb  03-eda.ipynb  04-cleaning.ipynb  05-modelling.ipynb  06-distances.ipynb  07-pagerank.ipynb  10-k-means.ipynb  11-gaussian-process.ipynb  12-logistic-regression.ipynb  13-knn.ipynb  14-ovr.ipynb  15-spectral-clustring-round-2.ipynb  16-cut-edge-statistic.ipynb  17-cleanlab.ipynb  18-label-noise-generation.ipynb  19-results-cleanlab.ipynb  feature.py  utils.py
scripts/: find-feature-names.aql
(+15 files in other folders)
