[tool.poetry]
name = "snow-leopard"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
lxml = "^4.6.3"
pyArango = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
