[tool.poetry]
name = "snow-leopard"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
lxml = "^4.6.3"
pyArango = "^1.3.5"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"
pandas-profiling = "^3.0.0"
ipywidgets = "^7.6.3"
seaborn = "^0.11.1"
openpyxl = "^3.0.7"
scikit-learn = "^0.24.2"
plotly = "^4.14.3"
networkx = "^2.5.1"
Cython = "^0.29.23"
cmake = "^3.20.2"
networkit = "^8.1"
tabulate = "^0.8.9"
fast-pagerank = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
